Closed Bug 958086 Opened 12 years ago Closed 12 years ago

gfxPattern::GetPattern Azure path for DrawTarget doesn't take into account pattern transform

Categories

(Core :: Graphics: Layers, defect)

28 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: ali, Assigned: ali)

References

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.63 Safari/537.36 Steps to reproduce: In gfxPattern::GetPattern for a DrawTarget, the pattern transform passed in is ignored in the Azure code path.
The pattern transform was not taking in to account the transform that was set on the draw target.
Attachment #8357802 - Flags: review?(bas)
Blocks: 947194
More info: Ran into reftest failures with some patches in bug 947194. (see try link: https://tbpl.mozilla.org/?tree=Try&rev=eee46edf1942). This patch fixes those reftest failures.
Attachment #8357802 - Flags: review?(bas) → review+
The pattern transform was not taking in to account the transform that was set on the draw target.
Attachment #8357802 - Attachment is obsolete: true
Keywords: checkin-needed
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Blocks: 959120
No longer blocks: 947194
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: