Bug 958086 - Adjust matrix in gfxPattern::GetPattern for Moz2D. r=bas

The pattern transform was not taking in to account the transform
that was set on the draw target.